# chameleon-ipc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  pyproject.toml
.github/workflows/: build.yml
cipc/: channel.h  client.h  ipc.h  msg.cc  msg.h  msg_test.cc  platform.h  serialize.cc  serialize.h  serialize_test.cc  service.cc  service.h  unix_channel.cc  unix_channel.h
cipcc/: interface.py  parser.py
cipcc/test/: test_parser.py  util.py
cmake/: gtest.cmake
test-resources/: simple.h
test-resources/callback/: callback.h  nested_callback.h
test-resources/include/circle/: a.h  b.h  c.h
test-resources/include/diamond/: a.h  b.h  d.h
test-resources/include/simple/: a.h  b.h  c.h
test-resources/method/: accessor.h  binary.h  consumer.h  default_impl.h  multiline.h  namespace.h  namespaced_type.h  nested_type.h  optional_param.h  overloaded.h  unary.h
test-resources/serializable/: class.h  class_with_methods.h  enum.h  enum_class.h  namespaced_struct.h  nested_struct.h  struct.h  struct_aggregate.h  struct_in_struct.h  struct_inline.h  struct_multiline_decl.h  struct_with_defaults.h
